Upgrade Gradle, AGP, Kotlin, and kotlinx serialization versions
- Upgrade Gradle from 8.7 to 8.14.1
- Upgrade AGP from 8.5.2 to 8.10.0
- Upgrade Kotlin from 2.1.0 to 2.1.21
- Upgrade kotlinx serialization library from 1.8.0-RC to 1.8.1
- Enable Gradle parallel build
- Disable Jetifier

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx8192M"
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+org.gradle.parallel=true
 #Kotlin
 kotlin.code.style=official
 kotlin.js.compiler=ir
@@ -10,3 +11,4 @@ kotlin.mpp.enableCInteropCommonization=true
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+android.enableJetifier=false
