Increase memory allocation to reduce build time

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,14 @@
 #Gradle
-org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx8192M"
+org.gradle.jvmargs=-Xmx64g -XX:MaxMetaspaceSize=8g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
+org.gradle.workers.max=2
 #Kotlin
 kotlin.code.style=official
+kotlin.daemon.jvmargs=-Xmx32g -XX:+UseG1GC
 kotlin.js.compiler=ir
+kotlin.native.cacheKind=static
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 #Android
