--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,11 +2,8 @@
 android-gradle-plugin = "8.10.0"
 android-compileSdk = "35"
 android-minSdk = "24"
-androidx-test-espresso = "3.5.1"
-androidx-test-junit = "1.2.1"
-androidx-test-rules = "1.6.1"
-androidx-test-runner = "1.6.2"
 bignum = "0.3.10"
+kotest = "5.9.1"
 kotlin = "2.1.21"
 kotlin-poet = "2.0.0"
 kotlinx-datetime = "0.7.1"
@@ -15,19 +12,18 @@ maven-publish = "0.29.0"
 spotless = "7.0.1"
 
 [libraries]
-androidx-test-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-test-espresso" }
-androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-junit" }
-androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-test-rules" }
-androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test-runner" }
 bignum = { group = "com.ionspin.kotlin", name = "bignum", version.ref = "bignum"}
+kotest-assertions-json = { module = "io.kotest:kotest-assertions-json", version.ref = "kotest" }
+kotest-framework-engine = {module = "io.kotest:kotest-framework-engine", version.ref = "kotest"}
+kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest" }
 kotlin-poet = { module = "com.squareup:kotlinpoet", version.ref = "kotlin-poet" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
 
-
 [plugins]
 android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
+kotest = { id = "io.kotest.multiplatform", version.ref = "kotest" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
